scripts/k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: argus-web
spec:
  selector:
    app: argus-web
  ports:
    - port: 80
      targetPort: 8000
